# Heif

./: .dockerignore  .gitattributes  .gitignore  Carbon.Codecs.Heif.sln  Heif.sln  README.md  azure-pipelines.yml  brainstorm.md  stylecop.json
.github/workflows/: master.yml
publish/: Carbon.Codecs.Heif.nuspec  Carbon.Heif.nuspec  Heif.nuspec  publish.yml
src/Carbon.Codecs.Heif/: Carbon.Codecs.Heif.csproj  HeifChannel.cs  HeifColorProfileType.cs  HeifContext.Native.cs  HeifContext.cs  HeifException.cs  HeifImage.Native.cs  HeifImage.cs  HeifImageHandle.cs  HeifPlane.cs  HeifRawColorProfile.cs  NativeInstance.cs  NativeLibrary.cs
src/Carbon.Codecs.Heif.Native/: CMakeLists.txt  Carbon.Codecs.Heif.Native.targets  Carbon.Codecs.Heif.Native.vcxproj  Stdafx.h
src/Heif/: Heif.csproj  HeifChannel.cs  HeifColorProfileType.cs  HeifContext.Native.cs  HeifContext.cs  HeifException.cs  HeifImage.Native.cs  HeifImage.cs  HeifImageCollection.cs  HeifImageHandle.Native.cs  HeifImageHandle.cs  HeifMetadata.cs  HeifPlane.cs  IHeifImageCollection.cs  NativeInstance.cs  NativeLibrary.cs
src/Heif.Native/: CMakeLists.txt  Heif.Native.targets  Heif.Native.vcxproj  HeifContext.c  HeifImage.c  HeifImage.h  HeifImageHandle.c  Stdafx.c  Stdafx.h
src/aom/: aom.vcxproj  aom.vcxproj.filters  checkout.cmd  checkout.sh
src/libde265/: CMakeLists.Windows.txt  checkout.cmd  checkout.sh
src/libheif/: CMakeLists.Windows.txt  checkout.cmd  checkout.sh
tests/Carbon.Codecs.Heif.Tests/: Carbon.Codecs.Heif.Tests.csproj  TestFiles.cs
tests/Heif.Tests/: Heif.Tests.csproj  TestFiles.cs
(+13 files in other folders)
